--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --color-choice: #ffffff;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -23,4 +27,5 @@ body {
 
 .square {
     border: .2px solid black;
+    background-color: var(--color-choice);
 }
