feat: toggle active button class

--- a/style.css
+++ b/style.css
@@ -30,3 +30,7 @@ body {
     border: var(--border);
     background-color: var(--color-choice);
 }
+
+.active-btn {
+    background-color: yellow;
+}
