--- a/style.css
+++ b/style.css
@@ -13,6 +13,20 @@ html {
     height: -webkit-fill-available;
 }
 
+
+
+
+
+
+body {
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+    text-align: center;
+    font-size: 1.2rem;
+    font-family: 'VT323', monospace;
+}
+
+
 h1 {
     font-size: 5rem;
 }
@@ -33,30 +47,17 @@ button {
 
 
 
-
-
-body {
-    min-height: 100vh;
-    min-height: -webkit-fill-available;
-    text-align: center;
-    font-size: 1.2rem;
-    font-family: 'VT323', monospace;
-}
-
-
-
-
 .container {
     display: flex;
     justify-content: center;
-    margin-top: 5em;
+    margin-top: 2rem;
     gap: 10rem;
 }
 
 .grid-container {
     flex: 0 0 auto;
-    height: 30rem;
-    width: 30rem;
+    height: 35rem;
+    width: 35rem;
     display: flex;
     flex-wrap: wrap;
     background-color: #ffffff;
@@ -123,8 +124,8 @@ body {
 }
 
 #color-picker {
-    width: 5em;
-    height: 5em;
+    width: 6em;
+    height: 6em;
 }
 
 
@@ -218,31 +219,46 @@ button:hover {
 
 
 
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
     .container {
         gap: 5rem;
     }
 }
 
-@media (max-width: 940px) {
+
+@media (max-width: 1020px) {
     .container {
         gap: 1.3rem;
     }
-}
-
-
-
-@media (max-width: 850px) {
-    body {
-        font-size: 1rem;
+    #draw-btn,
+    #eraser-btn,
+    #random-btn {
+        width: 2.5em;
+        height: 2.5em;
+    }
+    #color-picker {
+        width: 5em;
+        height: 5em;
     }
 }
 
 
+@media (max-width: 900px) {
+    body {
+        font-size: 1rem;
+    }
+    grid-container {
+        width: 25rem;
+        height: 25rem;
+    }
+    #color-picker {
+        width: 3.5em;
+        height: 3.5em;
+    }
+}
 
 
-
-@media (max-width: 780px) {
+@media (max-width: 850px) {
     .container {
         gap: 2rem;
         flex-direction: column;
@@ -257,24 +273,14 @@ button:hover {
         display: flex;
         flex-direction: column;
     }
-    .grid-container {
-        width: 25rem;
-        height: 25rem;
-    }
-
     h1 {
         font-size: 3rem;
     }
-
     #draw-btn,
     #eraser-btn,
     #random-btn {
         width: 2em;
         height: 2em;
-    }
-    #color-picker {
-        width: 3.5em;
-        height: 3.5em;
     }
 
     #clear-btn,
@@ -293,7 +299,7 @@ button:hover {
     
 }
 
-@media (max-width: 450px) {
+@media (max-width: 600px) {
     .grid-container {
         width: 20rem;
         height: 20rem;
