--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ button {
     display: flex;
     flex-wrap: wrap;
     background-color: #ffffff;
-    border: 5px solid burlywood;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 .colorbtns-container,
@@ -142,7 +142,8 @@ button {
 }
 
 #blur-btn {
-    margin-top: .5em;
+    margin-top: .25em;
+    margin-bottom: .25em;
 }
 
 #shade-btn {
@@ -284,7 +285,8 @@ button:hover {
     }
 
     #clear-btn,
-    #eraser-btn {
+    #eraser-btn,
+    #blur-btn {
         margin-bottom: 0;
     }
 
