--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button {
     color: black;
     background-color: #faf9f9;
     padding: 2px;
-    border: none;
+    border: transparent;
 }
 
 .header {
