--- a/style.css
+++ b/style.css
@@ -195,6 +195,21 @@ button {
 
 button:hover {
     cursor: pointer;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+#blur-btn:hover,
+#shade-btn:hover,
+#clear-btn:hover,
+#eight-btn:hover,
+#sixteen-btn:hover,
+#thirtytwo-btn:hover,
+#sixtyfour-btn:hover,
+#grid-btn:hover {
+    background: linear-gradient(black, #e76767, #ffc20e);
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 
 
