--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ button {
     display: flex;
     justify-content: center;
     margin-top: 2rem;
-    gap: 10rem;
+    gap: 6rem;
 }
 
 .grid-container {
@@ -76,7 +76,7 @@ button {
 .gridbtns-container {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: .5em;
 }
 
 
@@ -91,10 +91,7 @@ button {
     flex-direction: column;
 }
 
-.shadebtns-container {
-    align-self: center;
-  
-}
+
 
 
 
@@ -109,14 +106,7 @@ button {
 .square {
     border: var(--grid-border);
     background-color: transparent;
-    filter: brightness(100%);
-    
 }
-
-
-
-
-
 
 
 
@@ -126,14 +116,14 @@ button {
 #draw-btn,
 #eraser-btn,
 #random-btn {
-    width: 3em;
-    height: 3em;
+    width: 2.5em;
+    height: 2.5em;
     border-radius: 25%;
 }
 
 #color-picker {
-    width: 6em;
-    height: 6em;
+    width: 5.5em;
+    height: 5.5em;
 }
 
 
@@ -245,7 +235,7 @@ button:hover {
 
 @media (max-width: 1200px) {
     .container {
-        gap: 5rem;
+        gap: 3rem;
     }
 }
 
@@ -254,30 +244,26 @@ button:hover {
     .container {
         gap: 1.3rem;
     }
+    body {
+        font-size: 1rem;
+    }
     #draw-btn,
     #eraser-btn,
     #random-btn {
-        width: 2.5em;
-        height: 2.5em;
+        width: 2em;
+        height: 2em;
     }
     #color-picker {
-        width: 5em;
-        height: 5em;
+        width: 3.5em;
+        height: 3.5em;
     }
 }
 
 
 @media (max-width: 900px) {
-    body {
-        font-size: 1rem;
-    }
     grid-container {
         width: 25rem;
         height: 25rem;
-    }
-    #color-picker {
-        width: 3.5em;
-        height: 3.5em;
     }
 }
 
