--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
     text-align: center;
     font-size: 1.2rem;
     font-family: 'VT323', monospace;
-    background-color: #faf9f9;
+
+    background-image: linear-gradient(to right, #434343 0%, black 100%);
 }
 
 
@@ -77,6 +78,7 @@ button {
     display: flex;
     flex-direction: column;
     gap: .5em;
+    margin-top: 2em;
 }
 
 
@@ -185,7 +187,7 @@ button {
 
 button:hover {
     cursor: pointer;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    box-shadow: rgba(113, 113, 198, 0.56) 0px 6px 12px 2px,rgba(212, 186, 186, 0.937) 0px 3px 7px 3px;
 }
 
 #blur-btn:hover,
@@ -205,7 +207,7 @@ button:hover {
 
 .active-btn {
     background-color: #db0f0f9e;
-    color: blue;
+    color: #ffc20e;
 }
 
 
@@ -277,14 +279,14 @@ button:hover {
     .colorbtns-container,
     .gridbtns-container {
         flex-direction: row;
-       
+        margin-top: 0;
     }
     .shadebtns-container {
         display: flex;
         flex-direction: column;
     }
     h1 {
-        font-size: 3rem;
+        font-size: 4rem;
     }
     #draw-btn,
     #eraser-btn,
