--- a/style.css
+++ b/style.css
@@ -215,6 +215,12 @@ button:hover {
     background-color: #c8c8c8;
 }
 
+.shadow-on {
+    box-shadow: rgba(84, 84, 158, 0.56) 0px 8px 11px 2px,rgba(192, 162, 162, 0.937) 0px 3px 7px -3px;
+
+    transition: .5s;
+}
+
 
 
 
