--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 
 h1 {
-    font-size: 4rem;
+    font-size: 3.3rem;
 }
 
 button {
@@ -72,6 +72,8 @@ button {
 .colorbtns-container {
     display: flex;
     justify-content: space-between;
+    
+    padding: 0 6rem 0 1rem;
 }
 
 .app-inner-container {
@@ -85,9 +87,15 @@ button {
     width: 40rem;
     display: flex;
     flex-wrap: wrap;
+    resize: both;
+    overflow: auto;
+
+    padding: .25rem;
+}
+
+.backlight {
     background-color: #f6f4e3;
     box-shadow: #4c76de 1px 1px 15px 0px;
-    padding: .25rem;
 }
 
 .square {
@@ -96,10 +104,17 @@ button {
 }
 
 .gridbtns-container {
-    margin-left: 1.5rem;
+    min-width: 7.5rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: .5rem;
+    align-items: center;
+    padding-top: .2em;
+}
+
+.gridbtns-background {
+    background-color: #434343;
+    filter: drop-shadow(0 0px 0.25rem #fefae06b);
 }
 
 
@@ -110,9 +125,6 @@ button {
     margin-top: .75rem;
 }
 
-.onetwentyeight-btn {
-    font-size: .9rem;
-}
 
 
 
@@ -167,6 +179,12 @@ button:hover {
     color: #c04141;
 }
 
+.active-grid-btn {
+    color: #d7080bc5;
+    text-shadow: 2px 1px #817d9e87;
+    box-shadow: rgba(84, 84, 158, 0.56) 0px 2px 2px 2px,rgba(192, 162, 162, 0.937) 0px 3px 7px -3px;
+}
+
 
 
 .shadow-on {
@@ -210,7 +228,7 @@ button:hover {
 }
 
 .gridshape-btn {
-    background-image: url('images/temp.png');
+    background-image: url('images/circle-grid.png');
     background-size: cover;
 }
 
@@ -221,11 +239,6 @@ button:hover {
 
 .darker-btn {
     background-image: url('images/darker.png');
-    background-size: cover;
-}
-
-.spacer-btn {
-    background-image: url('images/temp.png');
     background-size: cover;
 }
 
@@ -284,15 +297,20 @@ button:hover {
     }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 720px) {
     .grid-container {
         height: 30rem;
         width: 30rem;
     }
+    .gridbtns-container {
+        min-width: 5rem;
+    }
     
-    .img-btn {
+    .img-btn,
+    button {
     width: 2.5rem;
     height: 2.5rem;
+    font-size: 1rem;
     }
 }
 
@@ -301,10 +319,6 @@ button:hover {
         height: 27rem;
         width: 27rem;
     }
-
-    .grid-container {
-        margin-left: .25rem;
-    }
     
 }
 
@@ -312,17 +326,18 @@ button:hover {
     .app-inner-container {
         flex-direction: column;
     }
+    .colorbtns-container {
+        padding: 0 1rem;
+        justify-items: space-around;
+    }
     .gridbtns-container {
         flex-direction: row;
         justify-content: space-between;
-        margin-left: 0;
+        padding: .3rem;
     }
     .grid-container {
         align-self: center;
         margin-top: 1rem;
-    }
-    .gridbtns-container {
-        margin-top: 1.5rem;
     }
     
 }
@@ -336,9 +351,6 @@ button:hover {
         height: 2.5rem;
         width: 2.5rem;
         font-size: 1rem;
-    }
-    .onetwentyeight-btn {
-        font-size: .7rem;
     }
     .img-btn {
     width: 2rem;
